--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   gap: 1rem;
   align-items: center;
-  padding: 0.5rem;
+  padding: 1rem;
 
   @media screen and (max-width: 900px) {
     flex-direction: column;
@@ -13,14 +13,14 @@
   &__img {
     max-width: 50%;
     height: auto;
-    border-radius: var(--border-round);
+    border-radius: 0.5rem;
     box-shadow: 1px 1px 1rem var(--color-black);
   }
 }
 
 .section {
   text-align: center;
-  width: 50vw;
+  width: 60vw;
 
   &__title {
     font-size: 2rem;
@@ -32,6 +32,28 @@
     font-size: 1.2rem;
     color: var(--color-black);
     line-height: 1.6;
+  }
+
+  &__btn {
+    background-color: var(--color-black);
+    color: var(--color-white);
+    padding: 0.5rem 0.8rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: var(--border-round);
+    width: 50%;
+    transition: all 150ms ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      scale: 0.98;
+      box-shadow: 1px 1px 1rem var(--color-black);
+      background-color: var(--color-red);
+    }
+
+    @media screen and (max-width: 900px) {
+      margin-bottom: 2rem;
+    }
   }
 }
 
